<resources>
    <string name="app_name">scor-ares</string>

    <!-- Labels των επιλογών στο μενού -->
    <string name="label_menu_choose_sport">Επιλογή Αθλήματος</string>
    <string name="label_menu_favourites">Αγαπημένα</string>
    <string name="label_menu_nearby_events">Αγώνες Τοποθεσίας</string>
    <string name="label_menu_settings">Ρυθμίσεις Χρήστη</string>
    <string name="label_forum">Είσοδος στο Forum</string>
    
    <!-- Ενδειγματικό string-array -->
    <string-array name="dummy_choices">
        <item>Team #1</item>
        <item>Team #2</item>
        <item>Team #3</item>
        <item>Team #4</item>
        <item>Team #5</item>
    </string-array>

    <!-- Labels των επιλογών της κατηγορίας μενού "επιλογή αθλήματος" -->
    <string name="opt_football">Ποδόσφαιρο</string>
    <string name="opt_basketball">Μπάσκετ</string>
    <string name="opt_volleyball">Βόλεϊ</string>
    <string name="opt_tennis">Τένις</string>

    <!-- Throwaway dummy text -->
    <string name="dummy_text">Dummy Text</string>

    <!-- Action Bar Drawer Toggle accessibility values -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
</resources>
