<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_choose_sport"
        android:icon="@drawable/ic_dropdown"
        android:title="@string/label_menu_choose_sport">
        <menu>
            <item
                android:title="@string/opt_football"
                android:id="@+id/menu_choose_football"/>
            <item
                android:title="@string/opt_basketball"
                android:id="@+id/menu_choose_basketball"
                />
            <item
                android:title="@string/opt_volleyball"
                android:id="@+id/menu_choose_volleyball"/>
            <item
                android:title="@string/opt_tennis"
                android:id="@+id/menu_choose_tennis"/>
        </menu>
    </item>
        <item
            android:id="@+id/menu_favourites"
            android:icon="@drawable/ic_favourites"
            android:title="@string/label_menu_favourites" />
        <item
            android:id="@+id/menu_forum"
            android:icon="@drawable/ic_forum"
            android:title="@string/label_forum" />
        <item
            android:id="@+id/menu_nearby_events"
            android:icon="@drawable/ic_nearby_events"
            android:title="@string/label_menu_nearby_events" />
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/label_menu_settings" />
</menu>